--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <img src="img/arrow.png" alt="#" class="plan__img">
                 <p class="plan__part">Прибыль</p>
                 <div class="plan__video">
-                    <img src="img/play.png" alt="#" class="plan__video__play">
+                    <img src="img/play.png" alt="#" class="plan__video_play">
                 </div>
                 <!-- /.robor__video -->
                 <div class="plan__block">
-                    <h3 class="plan__block__title">Реальный пример работы алгоритма</h3>
+                    <h3 class="plan__block_title">Реальный пример работы алгоритма</h3>
                     <p class="plan__text">Меня с детства интересовал анализ процессов, которые происходят в мире финансов. Именно этот интерес меня подтолкнул получить высшее образование в сфере экономико-математического моделирования </p>
                     <button class="plan__button">Приступить к созданию своего доходного робота</button>
                 </div>
@@ -148,28 +148,28 @@
         <div class="training__block">
           <div class="training__card">
               <img src="img/disk.png" alt="" class="training__icon">
-              <h3 class="training__card__title">Видеолекции</h3>
-              <p class="training__card__text">Смотрите лекции on-line
+              <h3 class="training__card_title">Видеолекции</h3>
+              <p class="training__card_text">Смотрите лекции on-line
                   от лучших преподавателей
                   алготрейдинга</p>
           </div>
           <div class="training__card">
               <img src="img/mark.png" alt="" class="training__icon">
-              <h3 class="training__card__title">Практическая часть</h3>
-              <p class="training__card__text">Выполняйте домашние задания
+              <h3 class="training__card_title">Практическая часть</h3>
+              <p class="training__card_text">Выполняйте домашние задания
                   и проверяйте полученные знания
                   с помощью различных интерактивных тестов</p>
           </div>
           <div class="training__card">
               <img src="img/chat.png" alt="" class="training__icon">
-              <h3 class="training__card__title">Форум</h3>
-              <p class="training__card__text">Обговаривайте вопросы, которые Вас интересуют, напрямую
+              <h3 class="training__card_title">Форум</h3>
+              <p class="training__card_text">Обговаривайте вопросы, которые Вас интересуют, напрямую
                   с преподавателями и с другими студентами на закрытом форуме</p>
           </div>
           <div class="training__card">
               <img src="img/headphones.png" alt="" class="training__icon">
-              <h3 class="format__card__title">On-line вебинары</h3>
-              <p class="training__card__text">Учувствуйте в мастер-классах наших преподавателей в режиме реально времени, и тут же обсуждайте с ними интересующие Вас вопросы</p>
+              <h3 class="format__card_title">On-line вебинары</h3>
+              <p class="training__card_text">Учувствуйте в мастер-классах наших преподавателей в режиме реально времени, и тут же обсуждайте с ними интересующие Вас вопросы</p>
           </div>
       </div>
       <!-- /.format__block -->
@@ -186,30 +186,30 @@
           </div>
             <div class="price__cards">
               <div class="price__card">
-                <h3 class="price__card__title">Gold</h3>
-                <span class="price__card__info selection">$297</span>
-                <p class="price__card__text">Начитка лекций</p>
-                <p class="price__card__text">Практика</p>
-                <p class="price__card__text">Ответы на вопросы</p>
-                <p class="price__card__text">Тех. поддержка</p>
+                <h3 class="price__card_title">Gold</h3>
+                <span class="price__card_info selection">$297</span>
+                <p class="price__card_text">Начитка лекций</p>
+                <p class="price__card_text">Практика</p>
+                <p class="price__card_text">Ответы на вопросы</p>
+                <p class="price__card_text">Тех. поддержка</p>
                 <button class="button button__secondary price__button">купить</button>
               </div>
               <!-- /.price__card -->
               <div class="price__card">
-                <h3 class="price__card__title">Premium</h3>
-                <span class="price__card__info selection">$497</span>
-                <p class="price__card__text">Обучение с куратором</p>
-                <p class="price__card__text">Постоянная возможность связаться с преподователем</p>
-                <p class="price__card__text">Практика</p>
+                <h3 class="price__card_title">Premium</h3>
+                <span class="price__card_info selection">$497</span>
+                <p class="price__card_text">Обучение с куратором</p>
+                <p class="price__card_text">Постоянная возможность связаться с преподователем</p>
+                <p class="price__card_text">Практика</p>
                 <button class="button button__secondary price__button">купить</button>
               </div>
               <!-- /.price__card -->
               <div class="price__card">
-                <h3 class="price__card__title">VIP</h3>
-                <span class="price__card__info selection">$997</span>
-                <p class="price__card__text">Полностью индивидуальное обучение!</p>
-                <p class="price__card__text">Индивидуальная программа</p>
-                <p class="price__card__text">Максимум практики</p>
+                <h3 class="price__card_title">VIP</h3>
+                <span class="price__card_info selection">$997</span>
+                <p class="price__card_text">Полностью индивидуальное обучение!</p>
+                <p class="price__card_text">Индивидуальная программа</p>
+                <p class="price__card_text">Максимум практики</p>
                 <button class="button button__secondary price__button">купить</button>
               </div>
               <!-- /.price__card -->
@@ -222,46 +222,46 @@
       <section class="privilege">
         <div class="container">
           <h2 class="section__title privilege__title">Преимущества курса</h2>
-          <h3 class="privilege__cards__title">Интенсив</h3>
+          <h3 class="privilege__cards_title">Интенсив</h3>
           <div class="privilege__cards">
             <div class="privilege__card">
-              <img src="img/star.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">Профессионалы</h3>
-              <p class="privilege__card__text">Преподавать курс для Вас будут только опытные трейдеры-практик</p>
+              <img src="img/star.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">Профессионалы</h3>
+              <p class="privilege__card_text">Преподавать курс для Вас будут только опытные трейдеры-практик</p>
             </div>
             <!-- /.privilege__card -->
             <div class="privilege__card">
-              <img src="img/layers.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">Последовательность</h3>
-              <p class="privilege__card__text">Все действия шаг за шагом и до результата вместе с профессионалами своего дела</p>
+              <img src="img/layers.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">Последовательность</h3>
+              <p class="privilege__card_text">Все действия шаг за шагом и до результата вместе с профессионалами своего дела</p>
             </div>
             <!-- /.privilege__card -->
             <div class="privilege__card">
-              <img src="img/lightning.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">100% практики</h3>
-              <p class="privilege__card__text">Так много практики у Вас еще не было. И всё это под руководством профессионалов</p>
+              <img src="img/lightning.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">100% практики</h3>
+              <p class="privilege__card_text">Так много практики у Вас еще не было. И всё это под руководством профессионалов</p>
             </div>
             <!-- /.privilege__card -->
           </div>
           <!-- /.privilege__cards -->
-          <h3 class="privilege__cards__title">Результат</h3>
+          <h3 class="privilege__cards_title">Результат</h3>
           <div class="privilege__cards">
             <div class="privilege__card">
-              <img src="img/face.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">Авторские работы.</h3>
-              <p class="privilege__card__text">Получите авторских торговых роботов алготрейдинга, успешно торгующих с 2013 года</p>
+              <img src="img/face.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">Авторские работы.</h3>
+              <p class="privilege__card_text">Получите авторских торговых роботов алготрейдинга, успешно торгующих с 2013 года</p>
             </div> 
             <!-- /.privilege__card -->
             <div class="privilege__card">
-              <img src="img/safe.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">Банк данных</h3>
-              <p class="privilege__card__text">Получите постоянный доступ к закрытой информации, которой Вы точно не найдёте ни в книгах, ни на других курсах обучения</p>
+              <img src="img/safe.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">Банк данных</h3>
+              <p class="privilege__card_text">Получите постоянный доступ к закрытой информации, которой Вы точно не найдёте ни в книгах, ни на других курсах обучения</p>
             </div>
             <!-- /.privilege__card -->
             <div class="privilege__card">
-              <img src="img/diamond.png" alt="#" class="privilege__card__image">
-              <h3 class="privilege__card__title">Личный робот и сертификат</h3>
-              <p class="privilege__card__text">Успешно сдайте все задания курса и получите сертификат о его окончании! И главное — своего прибыльного торгового робота!</p>
+              <img src="img/diamond.png" alt="#" class="privilege__card_image">
+              <h3 class="privilege__card_title">Личный робот и сертификат</h3>
+              <p class="privilege__card_text">Успешно сдайте все задания курса и получите сертификат о его окончании! И главное — своего прибыльного торгового робота!</p>
             </div>
             <!-- /.privilege__card -->
           </div>
@@ -270,29 +270,70 @@
         <!-- /.container -->
       </section>
       <!-- /.privilege -->
+      <section class="price">
+        <div class="container">
+          <div class="price__heading">
+            <h2 class="section__title price__title"><span>Сколько</span> стоит обучение?</h2>
+            <span class="section__info price__info">Станьте частью алготрейдинга прямо сейчас и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</span>
+          </div>
+            <div class="price__cards">
+              <div class="price__card">
+                <h3 class="price__card_title">Gold</h3>
+                <span class="price__card_info selection">$297</span>
+                <p class="price__card_text">Начитка лекций</p>
+                <p class="price__card_text">Практика</p>
+                <p class="price__card_text">Ответы на вопросы</p>
+                <p class="price__card_text">Тех. поддержка</p>
+                <button class="button button__secondary price__button">купить</button>
+              </div>
+              <!-- /.price__card -->
+              <div class="price__card">
+                <h3 class="price__card_title">Premium</h3>
+                <span class="price__card_info selection">$497</span>
+                <p class="price__card_text">Обучение с куратором</p>
+                <p class="price__card_text">Постоянная возможность связаться с преподователем</p>
+                <p class="price__card_text">Практика</p>
+                <button class="button button__secondary price__button">купить</button>
+              </div>
+              <!-- /.price__card -->
+              <div class="price__card">
+                <h3 class="price__card_title">VIP</h3>
+                <span class="price__card_info selection">$997</span>
+                <p class="price__card_text">Полностью индивидуальное обучение!</p>
+                <p class="price__card_text">Индивидуальная программа</p>
+                <p class="price__card_text">Максимум практики</p>
+                <button class="button button__secondary price__button">купить</button>
+              </div>
+              <!-- /.price__card -->
+            </div>
+            <!-- /.price__cards -->
+          </div>
+          <!-- /.section__heading -->
+      </section>
+      <!-- /.price -->
       <footer class="footer">
         <div class="container">
             <div class="footer__block">
                 <div class="footer__info">
                     <a href="#" class="footer__logo">Алготрейдинг</a>
                     <div class="footer__nav">
-                        <p class="footer__nav__info">
+                        <p class="footer__nav_info">
                             Обучение алгоритмической торговле
                         </p>
-                        <div class="footer__nav__block">
-                            <a href="#" class="footer__nav__link">Аналитика</a>
-                            <a href="#" class="footer__nav__link">О проекте</a>
-                            <a href="#" class="footer__nav__link">Контакты</a>
+                        <div class="footer__nav_block">
+                            <a href="#" class="footer__nav_link">Аналитика</a>
+                            <a href="#" class="footer__nav_link">О проекте</a>
+                            <a href="#" class="footer__nav_link">Контакты</a>
                         </div>
-                        <div class="footer__nav__block">
-                            <a href="" class="footer__nav__link">Вопросы и ответы</a>
-                            <a href="" class="footer__nav__link">Записаться на курс</a>
+                        <div class="footer__nav_block">
+                            <a href="" class="footer__nav_link">Вопросы и ответы</a>
+                            <a href="" class="footer__nav_link">Записаться на курс</a>
                         </div>
                     </div>
                     <!-- /.footer__nav -->
                 </div>
                 <!-- /.footer__info -->
-                <div class="footer__contacts">
+                <div class="footer__contact">
                     <input type="text" placeholder="E-mail Рассылка" class="footer__input">
                 </div>
                 <!-- /.footer__contacts -->
